--- a/ToDoList.css
+++ b/ToDoList.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: Allura;
-    src: url(./images/Allura-Regular.ttf);
+    src: url(./fonts/Allura-Regular.ttf);
 }
 
 @font-face {
     font-family: Aurore;
-    src: url(./images/LaBelleAurore.ttf);
+    src: url(./fonts/LaBelleAurore.ttf);
 }
 
 body{
