--- a/ToDoList.css
+++ b/ToDoList.css
@@ -23,7 +23,7 @@ background-attachment: fixed;
 
 #header {
     opacity: 0.6;
-    background-color:#ce6114;
+    background-color:black;
     height: 70px;
     justify-content: flex-end;
 }
@@ -35,6 +35,7 @@ ul{
 #title {
     font-size: 55px;
     font-weight: bold;
+    color: white;
 }
 
 #header img {
@@ -60,12 +61,11 @@ ul{
 #doList li {
     border:2px black solid;
     display:block;
-    height:auto;
-    width:300px;
     border-radius:30px;
     margin-bottom: 10px; 
     font-size: 30px;
     font-family: Aurore;
+    word-wrap: break-word;
 }
 
 #doList {
@@ -73,7 +73,7 @@ ul{
     position:relative;
     text-align: center;
     top: 35px;
-    right: 55px;
+    right: 68px;
     padding: 16px;
 }
 
@@ -83,21 +83,24 @@ ul{
     font-size: 30px;
     font-family: Aurore;
 }
+#InputBtn {
+    background: #d9bc94;
+    border-radius: 7px;
+}
 
-
-    #input{
-    display:inline-grid;
-    }
+#input{
+display:inline-grid;
+margin-top: 22px;
+}
 
 #doneList li {
     border:2px black solid;
     display:block;
-    height:auto;
-    width:300px;
     border-radius:30px;
     margin-bottom: 10px; 
     font-size: 30px;
     font-family: Aurore;
+    word-wrap: break-word;
 }
 
 #doneList {
@@ -105,7 +108,7 @@ ul{
     position:relative;
     top:80px;
     text-align: center;
-    right: 55px;
+    right: 68px;
     padding: 16px;
 }
 
